2009-06-16  Andreia Gaita  <avidigal@novell.com>

	* Application.cs: Dispose properly by removing the application from the
	ToggleRef list, the same pattern that DO uses. Also, drop the extra ref
	that it has upon creation, ToggleRef has enough refs on it to go around.

2009-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyPart.cs: Avoid side effects with Deployment (adding to
	its assembly list). Allow a fast-path for MemoryStream (only).
	* Deployment.cs: Throw an exception if an assembly cannot be 
	downloaded. Support absolute URI (can be used for cross domain).
	Remove unused list (delay_assemblies).

2009-06-16  Alan McGovern  <amcgovern@novell.com>

	* Rect.cs: Fix a few more issues with Rect.Union 

2009-06-12  Alan McGovern  <amcgovern@novell.com>

	* Deployment.cs: Ensure that the handlers for Resized and
	  FullScreen are only registered once.

2009-06-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Make sure ExternalCallersFromCrossDomain is set
	once (e.g. if not part of the manifest). This will seal the value
	so it won't be possible to change it afterward.

2009-06-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Deployment.cs: When looking for the entry point assembly, we
	have to match names case insensitively. This makes MS DRT
	#519 and #520 load their entry point assemblies.

2009-06-10  Alan McGovern  <amcgovern@novell.com>

	* Deployment.cs:
	* Application.cs: Parse enough of the init params to make 352
	  fail instantly instead of timing out.

2009-06-05  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: if the assembly file doesn't exist inside the
	xap, try and load it from the SOO.

2009-06-04  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: rework a bunch of the error conditions here, and
	instead of Report.Error, we throw MoonExceptions.

2009-06-05  Alan McGovern  <amcgovern@novell.com>

	* SystemParameters.cs: Add a MonoTodo to HighContrast and make